--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,27 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.collapse.navbar-collapse {
+    flex-grow: 0;
+}
+
+.b-example-divider {
+    width: 100%;
+    height: 3rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: solid rgba(0, 0, 0, 0.15);
+    border-width: 1px 0;
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+        inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+}
+
+.row {
+    align-items: center;
+}
+
+#myCarousel div div img {
+    max-width: 100%;
+    height: calc(100vh - 63px);
+    object-fit: cover;
+}
+
+#btn-show {
+    margin: 16px;
+}
