Add reservation table, trying to fix navbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,10 +18,15 @@
 
 #myCarousel div div img {
     max-width: 100%;
-    height: calc(100vh - 63px);
+    height: calc(100vh - 64px);
+    margin-top: 0;
     object-fit: cover;
 }
 
 #btn-show {
     margin: 16px;
+}
+
+.navheightfix {
+    margin-top: calc(64px + 16px);
 }
